# bookrover

./: .env.example  .gitignore  Dockerfile  README.md  entrypoint.sh  main.py  package-lock.json  package.json  pyproject.toml  supervisord.conf  tsconfig.json
engine/src/: keyword_synonyms.py  llm.py  main.py
scraper/: index.js
scraper/src/: main.py
shared_python/src/: db_queries.py  embeddings.py  loadenv.py
webserver/public/: index.html  query.html
webserver/src/: index.ts
