[project]
name = "bookrover"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.84.0",
    "einops>=0.8.2",
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "google>=3.0.0",
    "google-genai>=1.66.0",
    "nltk>=3.9.2",
    "openai>=2.21.0",
    "pgvector>=0.4.2",
    "sentence-transformers>=5.2.2",
]
